<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/load_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_data"
        android:hint="@string/edit_text_hint"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_history"
        android:inputType="number"
        android:maxLength="8"/>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        android:text="@string/find"/>

    <Button
        android:id="@+id/button_history"
        android:layout_width="@dimen/size_button_history"
        android:layout_height="@dimen/size_button_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/icon_history"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/main_layout_margin" />

    <LinearLayout
        android:id="@+id/layout_card_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/main_layout_margin"
        app:layout_constraintTop_toBottomOf="@id/button_confirm"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/scheme_network"/>

        <TextView
            android:id="@+id/card_scheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_data"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/text_size_default"
            android:text="@string/brand"/>

        <TextView
            android:id="@+id/card_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_data"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/text_size_default"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_data"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/text_size_default"
            android:text="@string/prepaid"/>

        <TextView
            android:id="@+id/card_prepaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_data"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/card_number_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/text_margin_top">

            <TextView
                android:id="@+id/title_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_default"
                android:text="@string/card_number"/>


            <TextView
                android:id="@+id/title_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_card_number"
                android:textSize="@dimen/text_size_default"
                android:text="@string/length"/>

            <TextView
                android:id="@+id/card_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_length"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_data"/>

            <TextView
                android:id="@+id/title_luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/title_length"
                android:layout_below="@id/title_card_number"
                android:textSize="@dimen/text_size_default"
                android:text="@string/luhn"/>

            <TextView
                android:id="@+id/card_luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/title_luhn"
                android:layout_below="@id/title_luhn"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_data"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bank_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/text_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_default"
                android:text="@string/bank"/>


            <TextView
                android:id="@+id/name_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_data"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/url_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/text_size_default"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/phone_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/text_size_default"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/country_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top">

            <TextView
                android:id="@+id/title_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="@dimen/text_size_default"/>

            <TextView
                android:id="@+id/emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_data"
                android:layout_below="@id/title_country"/>

            <TextView
                android:id="@+id/name_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_data"
                android:layout_toEndOf="@id/emoji"
                android:layout_below="@id/title_country"/>

            <TextView
                android:id="@+id/location_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textSize="@dimen/text_size_default"
                android:layout_below="@id/name_country"/>

        </RelativeLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>